[gd_scene load_steps=3 format=3 uid="uid://bm1ydt1pqnac2"]

[ext_resource type="Script" uid="uid://dwc8bxyo3crrh" path="res://Scripts/crop_image_dialog.gd" id="1_a2a5b"]
[ext_resource type="Texture2D" uid="uid://bab5ql0qac4jt" path="res://Assets/Images/icons/iconset.png" id="2_fso5c"]

[node name="PopupCropper" type="Popup"]
title = "Crop Image"
size = Vector2i(500, 700)
visible = true
script = ExtResource("1_a2a5b")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ImagePreview" type="TextureRect" parent="Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 41.0
offset_top = 81.0
offset_right = -40.0
offset_bottom = 492.0
grow_horizontal = 2
texture = ExtResource("2_fso5c")
expand_mode = 1
stretch_mode = 5

[node name="CropOverlay" type="ColorRect" parent="Panel/ImagePreview"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.5
offset_top = -21.5
offset_right = 14.5
offset_bottom = 28.5
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.3)

[node name="CancelButton" type="Button" parent="Panel" groups=["Buttons"]]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 42.0
offset_top = -82.0
offset_right = 184.0
offset_bottom = -32.0
grow_vertical = 0
text = "ANNULLA"

[node name="ConfirmButton" type="Button" parent="Panel" groups=["Buttons"]]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -194.0
offset_top = -81.0
offset_right = -33.0
offset_bottom = -25.0
grow_horizontal = 0
grow_vertical = 0
text = "CONFERMA"
